fix IE z-index bug
git-svn-id: file:///www/metaways/svn.tine20.org/repo/trunk@8186 8d11cdf3-9d2f-0410-bbb5-e098f187f06b

--- a/tine20/Calendar/css/daysviewpanel.css
+++ b/tine20/Calendar/css/daysviewpanel.css
@@ -307,10 +307,6 @@
     cursor:pointer;
 }
 
-.cal-daysviewpanel-wholedayheader-pos {
-	position: relative;
-}
-
 .cal-daysviewpanel-wholedayevent-body {
 	position: absolute;
     width: 100%;
